--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <style>
 body {
   font-family: Ubuntu, sans-serif
+  overflow: hidden;
 }
 .deck {
   transform-style: preserve-3d;
   position: relative;
   margin: auto;
   margin-top: 2vw;
+  overflow: visible;
 }
 @media(orientation: portrait) {
   .deck {
